--- a/src/app/component/project/projects-section/projects-section.component.scss
+++ b/src/app/component/project/projects-section/projects-section.component.scss
@@ -1,7 +1,7 @@
 @use '../../../../styles';
 
 .content {
-    min-height: 100dvh;
+    min-height: 10svh;
     display: flex;
     justify-content: center;
     align-items: center;
