--- a/src/app/component/timeline/timeline-section/timeline-section.component.scss
+++ b/src/app/component/timeline/timeline-section/timeline-section.component.scss
@@ -1,5 +1,5 @@
 .content {
-    min-height: 100dvh;
+    min-height: 100svh;
     display: flex;
     justify-content: center;
     align-items: center;
