--- a/src/app/component/timeline/timeline-shared-style.scss
+++ b/src/app/component/timeline/timeline-shared-style.scss
@@ -1,4 +1,4 @@
-$timeline-info-height: 17.5dvh;
+$timeline-info-height: 17.5svh;
 $brace-thickness: 2px;
 $total-height: round(1em);
 $brace-height: calc($total-height / 2 - $brace-thickness / 2);
